プロフィール画面

--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -17,6 +17,11 @@
                         <a class="nav-link" href="/">ホーム</a>
                     </li>
                 </ul>
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'profile' %}">プロフィール</a>
+                    </li>
+                </ul>
             </div>
         </nav>
 
